# data

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Containerfile  DISTRIBUTION.md  Justfile  Justfile.bench  Justfile.network  Justfile.vars  MIGRATION.md  Makefile  PITCH.md  PROJECT.txt  PROJECT.txt~  Pfyfile.pf  TESTING_SUMMARY.md  WARP.md  WINNING_STRATEGY.md  afxdp_rx.time  bak_dir_contents.txt  baseline_results_updated.json  build-deb.sh  client.time  copilot-instructions.md  docker-compose.yml  fix_encoding.py  gram_client.time  gram_client_pfs.time  gram_client_tcp_payload.time  gram_server.pid  gram_server.time  gram_server_pfs.pid  gram_server_pfs.time  ideacontext.txt  l2_tx.time  l2_tx2.time  l2_tx3.time  l2_tx_200k.time  launch-packetfs.sh  (+23 more)
ALL_THE_DATA/: __diesel_schema_migrations.json  agent_conversations.json  ai_blocks.json  app.json  cloud_objects_refreshes.json  codebase_index_metadata.json  current_user_information.json  f  folders.json  generic_string_objects.json  mcp_environment_variables.json  object_actions.json  object_permissions.json  pane_leaves.json  pane_nodes.json  parse_data.py  project_rules.json  server_experiments.json  tabs.json  team_settings.json  teams.json  terminal_panes.json  user_profiles.json  windows.json  workflows.json  workspace_teams.json  workspaces.json
VMKit/: Justfile  KubeSimpl.justfile
all-code/: cleanup_misc_contents.txt  cleanup_system_contents.txt  cleanup_tmp_contents.txt  packetfs-mesh.network  packetfs-quantum-network.network  packetfs-quantum.container  packetfs-unified-compute.container  packetfs_test_data.json  received_via_packetfs.json
debian/: changelog  control  packetfs-transfer.service  packetfs-utils.postinst  rules
demo/: README.md  cpu_comparison.c  demo.py  execution_demo.py  incremental_demo.sh  packetfs_core_filesystem.py  packetfs_hardware_abstraction.py  packetfs_linux_os.py  packetfs_memory.c  true_execution_demo.py
docs/: PFS_Standardized_Report.md  PacketFS-gram_brief.md  PacketFS-pCPU_whitepaper.md  PacketFS.md  REPO_OVERVIEW_AND_FASTPATHS.md  hugepages_1g.md  pcpu_throughput.md  pfs_results.csv
fake_trash/: PacketFS_Official_Documentation.md  README.md
full_apps/pfs-infinity/osv/agent/: Cargo.toml
ideas/: README.md
new_optimize/: README.md  cython_optimized.pyx  setup.py
old_code/: README.md
out=logs/: cpu_baseline_sweep.csv
papers/: PROTOCOL.md  PROTOCOL_COMPARISON_ANALYSIS.md  README.md  REAL_NETWORK_TESTING_RESULTS.md
pasm/: spec.md
scripts/: afxdp_verify_iface.sh  check_dpdk_version.sh  ensure_afxdp_built.sh  (+4 more)
tmp/vm-filesystems/ubuntu-fresh/home/hacker/Projects/VMKit/: .gitignore  PROJECT.txt  VMKIT.md  WARP.md  cleanup.py  copilot-instructions.md  demo_advanced_allocation.py  pyproject.toml  requirements.txt
tmp/vm-filesystems/ubuntu-fresh/home/hacker/Projects/VMKit/.github/workflows/: ci.yml
tmp/vm-filesystems/ubuntu-fresh/home/hacker/Projects/VMKit/NOT_KUBERNETES/client-go/pkg/version/: base.go
tmp/vm-filesystems/ubuntu-fresh/home/hacker/Projects/VMKit/scripts/: parse_requirements.py
tmp/vm-filesystems/ubuntu-fresh/home/hacker/Projects/VMKit/tests/: __init__.py  test_cli.py  test_storage.py
tmp/vm-filesystems/ubuntu-fresh/home/hacker/Projects/VMKit/vmkit/: cli.py  cloudinit.py  config.py  host.py  migration.py  resources.py  vfio.py
(+70119 files in other folders)
