[package]
name = "spider-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
scraper = "0.19"
http = "1"
anyhow = "1"
thiserror = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
